--- a/packages/client-web/package.json
+++ b/packages/client-web/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.0",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
     "react-syntax-highlighter": "^15.4.5",
     "zent": "^9.12.1"
   },
